kubernetes/wasabi-main-config/wasabi-main-ing.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wasabi
  namespace: wasabi
  annotations:
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    external-dns.alpha.kubernetes.io/hostname: mycujoo.tv
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
    - mycujoo.tv
    secretName: staging-mycujoo-tv-crt
  - hosts:
    - mycujoo.tv
    secretName: mycujoo.tv-tls
  # Support www. prefix on production
  - hosts:
    - www.mycujoo.tv
    secretName: www.mycujoo.tv-tls
  rules:
  - host: wasabi.dev.mycujoo.tv
    http:
      paths:
      - path: /
        backend:
          serviceName: wasabi
          servicePort: 80
  # Support www. prefix on production
  - host: www.mycujoo.tv
    http:
      paths:
      - path: /
        backend:
          serviceName: wasabi
          servicePort: 80
